<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tvTitleNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_tv_title"
        android:text="@string/input_team_s_names"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Input team's names" />

    <EditText
        android:id="@+id/etFirstTeam"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_et_teams_main"
        android:layout_marginHorizontal="@dimen/horizontal_margin_et_teams_main"
        android:layout_marginTop="@dimen/main_margin_top_et_to_tv"
        android:background="@color/white"
        android:hint="@string/input_first_team_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/et_main_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleNames" />

    <EditText
        android:id="@+id/etSecondTeam"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_et_teams_main"
        android:layout_marginHorizontal="@dimen/horizontal_margin_et_teams_main"
        android:layout_marginTop="@dimen/main_margin_top_et_to_et"
        android:background="@color/white"
        android:hint="@string/input_second_team_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/et_main_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstTeam" />

    <TextView
        android:id="@+id/tvTitleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin_et_teams_main"
        android:text="@string/input_time"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSecondTeam"
        tools:text="Input time" />

    <EditText
        android:id="@+id/etSeconds"
        android:layout_width="@dimen/zero_width"
        android:layout_height="@dimen/height_et_teams_main"
        android:layout_marginTop="@dimen/margin_top_et_time"
        android:background="@color/white"
        android:hint="@string/seconds"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/et_main_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTime"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnGoToGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_to_game_margin_top"
        android:backgroundTint="@color/btns_color"
        android:enabled="false"
        android:text="@string/go_to_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTime" />


</androidx.constraintlayout.widget.ConstraintLayout>